--- a/index.html
+++ b/index.html
@@ -20,5 +20,30 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/header.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="navigation">
+      <nav class="container">
+        <div class="row align-center">
+          <a href="#main" class="logo col-12 col-lg-3">wd</a>
+          <ul class="nav-list col-12 col-lg-9">
+            <li class="nav-list-item">
+              <a class="nav-list-item-link active" href="#main">ГЛАВНАЯ</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-list-item-link" href="#about">ОБ АВТОРЕ</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-list-item-link" href="">РАБОТЫ</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-list-item-link" href="">ПРОЦЕСС</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-list-item-link" href="">КОНТАКТЫ</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
