--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="nav-list-item-link" href="#about">ОБ АВТОРЕ</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-list-item-link" href="">РАБОТЫ</a>
+              <a class="nav-list-item-link" href="">работы</a>
             </li>
             <li class="nav-list-item">
               <a class="nav-list-item-link" href="">ПРОЦЕСС</a>
@@ -45,5 +45,27 @@
         </div>
       </nav>
     </header>
+    <div class="bg-full">
+      <section class="container" id="main">
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <div class="wrapper">
+              <div class="inner-wrapper">
+                <picture>
+                  <source srcset="./assets/images/laptop.webp">
+                  <img class="main-img" src="./assets/images/laptop.png" alt="laptop">
+                </picture>
+              </div>
+            </div>
+          </div>
+          <article class="col-12 col-md-6">
+            <h1 class="main-heading">Дизайн и верстка</h1>
+            <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio aspernatur commodi vero blanditiis modi accusantium perferendis possimus facilis fugit reprehenderit?</p>
+            <button class="btn">НАПИСАТЬ МНЕ</button>
+          </article>
+        </div>
+      </section>
+    </div>
+
   </body>
 </html>
