Add common styles
Add styles for btn, text, bg-full

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./assets/css/grid.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/header.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body>
     <header class="navigation">
@@ -61,7 +62,7 @@
           <article class="col-12 col-md-6">
             <h1 class="main-heading">Дизайн и верстка</h1>
             <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio aspernatur commodi vero blanditiis modi accusantium perferendis possimus facilis fugit reprehenderit?</p>
-            <button class="btn">НАПИСАТЬ МНЕ</button>
+            <button class="btn overflow">НАПИСАТЬ МНЕ</button>
           </article>
         </div>
       </section>
