--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </nav>
     </header>
     <div class="bg-full">
-      <section class="container" id="main">
+      <section class="container main" id="main">
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="wrapper">
@@ -60,8 +60,8 @@
             </div>
           </div>
           <article class="col-12 col-md-6">
-            <h1 class="main-heading">Дизайн и верстка</h1>
-            <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio aspernatur commodi vero blanditiis modi accusantium perferendis possimus facilis fugit reprehenderit?</p>
+            <h1 class="main-heading overflow">Дизайн и верстка</h1>
+            <p class="content rows-overflow">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio aspernatur commodi vero blanditiis modi accusantium perferendis possimus facilis fugit reprehenderit?</p>
             <button class="btn overflow">НАПИСАТЬ МНЕ</button>
           </article>
         </div>
