Add section about

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/header.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/about.css" />
   </head>
   <body>
     <header class="navigation">
@@ -67,6 +68,13 @@
         </div>
       </section>
     </div>
-
+    <div>
+    <section class="about container" id="about">
+      <article class="col-12 col-md-6 content-centre">
+        <h2 class="sub-heading overflow">Обо мне</h2>
+          <p class="content rows-overflow">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+      </article>
+    </section>
+  </div>
   </body>
 </html>
