--- a/index.html
+++ b/index.html
@@ -53,20 +53,35 @@
             <div class="wrapper">
               <div class="inner-wrapper">
                 <picture>
-                  <source srcset="./assets/images/laptop.webp">
-                  <img class="main-img" src="./assets/images/laptop.png" alt="laptop">
+                  <source srcset="./assets/images/laptop.webp" />
+                  <img
+                    class="main-img"
+                    src="./assets/images/laptop.png"
+                    alt="laptop"
+                  />
                 </picture>
               </div>
             </div>
           </div>
           <article class="col-12 col-md-6">
             <h1 class="main-heading overflow">Дизайн и верстка</h1>
-            <p class="content rows-overflow">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio aspernatur commodi vero blanditiis modi accusantium perferendis possimus facilis fugit reprehenderit?</p>
+            <p class="content rows-overflow">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+              aspernatur commodi vero blanditiis modi accusantium perferendis
+              possimus facilis fugit reprehenderit?
+            </p>
             <button class="btn overflow">НАПИСАТЬ МНЕ</button>
           </article>
         </div>
       </section>
     </div>
-
+    <section class="about container" id="about">
+      <article class="col-12 col-md-6 content-center">
+        <h2 class="sub-hearding overflow">Обо мне</h2>
+        <p class="content">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis quis aliquid rerum. Quis sequi facilis expedita itaque minima excepturi aperiam, eaque cupiditate nostrum eius nam eos a ducimus, beatae maxime!
+        </p>
+      </article>
+    </section>
   </body>
 </html>
