--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/header.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/about-me.css" />
   </head>
   <body>
     <header class="navigation">
@@ -53,20 +54,33 @@
             <div class="wrapper">
               <div class="inner-wrapper">
                 <picture>
-                  <source srcset="./assets/images/laptop.webp">
-                  <img class="main-img" src="./assets/images/laptop.png" alt="laptop">
+                  <source srcset="./assets/images/laptop.webp" />
+                  <img
+                    class="main-img"
+                    src="./assets/images/laptop.png"
+                    alt="laptop"
+                  />
                 </picture>
               </div>
             </div>
           </div>
           <article class="col-12 col-md-6">
             <h1 class="main-heading overflow">Дизайн и верстка</h1>
-            <p class="content rows-overflow">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio aspernatur commodi vero blanditiis modi accusantium perferendis possimus facilis fugit reprehenderit?</p>
+            <p class="content rows-overflow">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+              aspernatur commodi vero blanditiis modi accusantium perferendis
+              possimus facilis fugit reprehenderit?
+            </p>
             <button class="btn overflow">НАПИСАТЬ МНЕ</button>
           </article>
         </div>
       </section>
     </div>
-
+    <section class="text-block">
+      <h2 class="text-block-title">Обо мне</h2>
+      <p>
+        Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+      </p>
+    </section>
   </body>
 </html>
