add h2 and new block about me

--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
         </div>
       </section>
     </div>
+    <article class="col-12">
+<div class="about-user align-center">
+  <span class="title-div h2">Обо мне</span>
+  <p class="p-div-about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt repudiandae iure architecto fugiat, possimus nisi iusto doloremque laudantium odio animi sequi optio dolorem! Accusantium veritatis, labore rerum repudiandae nihil perspiciatis!</p>
+</div>
+</article>
 
   </body>
 </html>
