Add logic for text-block

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
           <a href="#main" class="logo col-12 col-lg-3">wd</a>
           <ul class="nav-list col-12 col-lg-9">
             <li class="nav-list-item">
-              <a class="nav-list-item-link active" href="#main">ГЛАВНАЯ</a>
+              <a class="nav-list-item-link active" href="#main">главная</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-list-item-link" href="#about">ОБ АВТОРЕ</a>
+              <a class="nav-list-item-link" href="#about">об авторе</a>
             </li>
             <li class="nav-list-item">
               <a class="nav-list-item-link" href="">работы</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-list-item-link" href="">ПРОЦЕСС</a>
+              <a class="nav-list-item-link" href="">процесс</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-list-item-link" href="">КОНТАКТЫ</a>
+              <a class="nav-list-item-link" href="">контакты</a>
             </li>
           </ul>
         </div>
@@ -67,6 +67,15 @@
         </div>
       </section>
     </div>
-
+    <div>     <!--можно для обертки  использовать -->
+      <section class="text-block container" id="text-block">
+        <article class="col-12 col-md-6 content-center" >
+          <h2 class="sub-heading overflow">обо мне</h2>
+          <p class="content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis dicta nostrum unde rerum maxime. Dicta asperiores incidunt repellendus minima laborum.
+          </p>  
+        </article>  
+      </section>
+    </div>
   </body>
 </html>
