--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/header.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/about_block.css"/>
   </head>
   <body>
     <header class="navigation">
@@ -67,8 +68,8 @@
         </div>
       </section>
     </div>
-    <article class="col-12">
-<div class="about-user align-center">
+    <article class="col-12 col-md-9">
+<div class="about-user">
   <span class="title-div h2">Обо мне</span>
   <p class="p-div-about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt repudiandae iure architecto fugiat, possimus nisi iusto doloremque laudantium odio animi sequi optio dolorem! Accusantium veritatis, labore rerum repudiandae nihil perspiciatis!</p>
 </div>
