--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/header.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="text-block.css">
   </head>
   <body>
     <header class="navigation">
@@ -62,7 +63,7 @@
           <article class="col-12 col-md-6">
             <h1 class="main-heading overflow">Дизайн и верстка</h1>
             <p class="content rows-overflow">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio aspernatur commodi vero blanditiis modi accusantium perferendis possimus facilis fugit reprehenderit?</p>
-            <button class="btn overflow">НАПИСАТЬ МНЕ</button>
+            <button class="btn overflow">написать мне</button>
           </article>
         </div>
       </section>
@@ -72,7 +73,7 @@
         <article class="col-12 col-md-6 content-center" >
           <h2 class="sub-heading overflow">обо мне</h2>
           <p class="content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis dicta nostrum unde rerum maxime. Dicta asperiores incidunt repellendus minima laborum.
+            Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
           </p>  
         </article>  
       </section>
