Add text-block style

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/header.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
-    <link rel="stylesheet" href="text-block.css">
+    <link rel="stylesheet" href="./assets/css/text-block.css">
   </head>
   <body>
     <header class="navigation">
@@ -68,15 +68,13 @@
         </div>
       </section>
     </div>
-    <div>     <!--можно для обертки  использовать -->
-      <section class="text-block container" id="text-block">
-        <article class="col-12 col-md-6 content-center" >
-          <h2 class="sub-heading overflow">обо мне</h2>
-          <p class="content">
-            Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
-          </p>  
-        </article>  
-      </section>
-    </div>
+    <section class="text-block container" id="text-block">
+      <article class="col-12 col-lg-6 content-center" >
+        <h2 class="sub-heading overflow">Обо мне</h2>
+        <p class="content content center">
+          Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+        </p>  
+      </article>  
+    </section>     
   </body>
-</html>
+</html> 
