--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./assets/css/header.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="stylesheet" href="./assets/css/text-block.css">
+    <link rel="stylesheet" href="./assets/css/achievement.css">
   </head>
   <body>
     <header class="navigation">
@@ -75,6 +76,15 @@
           Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
         </p>  
       </article>  
-    </section>     
+    </section>   
+    <div class="achievement">
+      <div class="achievement-wrapper col-12 col-md-6">
+         <picture>
+          <!-- <source srcset="./assets/images/paper.webp"> -->
+          <!-- <img class="main-img" src="./assets/images/paper.png" alt="paper"> -->
+         </picture>
+
+      </div>
+    </div>  
   </body>
 </html> 
