--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
     </section>   
     <div class="achievement">
       <div class="achievement-wrapper col-12 col-md-6">
-         <picture>
-          <!-- <source srcset="./assets/images/paper.webp"> -->
-          <!-- <img class="main-img" src="./assets/images/paper.png" alt="paper"> -->
+         <picture >
+          <source srcset="./assets/images/paper.webp">
+          <img class="legend" src="./assets/images/paper.png" alt="paper">
          </picture>
-
+         
       </div>
     </div>  
   </body>
