--- a/index.html
+++ b/index.html
@@ -82,5 +82,9 @@
         Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
       </p>
     </section>
+    <footer class="footer">
+      <p class="footer-name">Фамилия Имя</p>
+      <p class="footer-right">(с) 2022. Все права защищены.</p>
+    </footer>
   </body>
 </html>
