Make footer style

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./assets/css/header.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="stylesheet" href="./assets/css/about-me.css" />
+    <link rel="stylesheet" href="./assets/css/footer.css" />
   </head>
   <body>
     <header class="navigation">
@@ -83,7 +84,7 @@
       </p>
     </section>
     <footer class="footer">
-      <p class="footer-name">Фамилия Имя</p>
+      <h3 class="footer-name">Фамилия Имя</h3>
       <p class="footer-right">(с) 2022. Все права защищены.</p>
     </footer>
   </body>
