add structure about

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./assets/css/header.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="stylesheet" href="./assets/css/about.css" />
+    <link rel="stylesheet" href="./assets/css/skills.css" />
   </head>
   <body>
     <header class="navigation">
@@ -69,11 +70,35 @@
       </section>
     </div>
     <div>
-    <section class="about container" id="about">
+    <section class="container about " id="about">
       <article class="col-12 col-md-6 content-centre">
         <h2 class="sub-heading overflow">Обо мне</h2>
           <p class="content rows-overflow">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
       </article>
+    </section>
+  </div>
+  <div>
+    <section class="container skills " id="skills"> 
+    <article class="col-12 col-md-6">
+      <table>
+        <thead>
+          <tr>
+            <th>Мои навыки</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Adobe Photoshop</td>
+            <td>Adobe Photoshop</td>
+            <td>Adobe Photoshop</td>
+          </tr>
+        </tbody>
+      </table>
+      <picture>
+        <source srcset="./assets/images/user.webp">
+      <img class="user-skills" src="./assets/images/user_mobile.jpg" alt="user">
+    </picture>
+    </article>
     </section>
   </div>
   </body>
