Add projects block
html structure & empty css

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="stylesheet" href="./assets/css/about-me.css" />
     <link rel="stylesheet" href="./assets/css/footer.css" />
+    <link rel="stylesheet" href="./assets/css/projects.css" />
   </head>
   <body>
     <header class="navigation">
@@ -82,7 +83,40 @@
       <p>
         Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
       </p>
-    </section>
+   <div class="projects">
+     <section class="projects-container">
+       <div class="projects-row">
+         <div class="col-12 col-md-4 col-lg-2"> 
+           <div class="wrapper"> 
+             <img src="./assets/images/project-icon.png" alt="project-icon">
+             <div class="projects-text"><p>40+ проектов</p></div>
+            </div>
+            <div class="wrapper"> 
+              <img src="./assets/images/project-icon.png" alt="project-icon">
+              <div class="projects-text"><p>40+ проектов</p></div>
+             </div>
+             <div class="wrapper"> 
+              <img src="./assets/images/project-icon.png" alt="project-icon">
+              <div class="projects-text"><p>40+ проектов</p></div>
+             </div>
+             <div class="wrapper"> 
+              <img src="./assets/images/project-icon.png" alt="project-icon">
+              <div class="projects-text"><p>40+ проектов</p></div>
+             </div>
+             <div class="wrapper"> 
+              <img src="./assets/images/project-icon.png" alt="project-icon">
+              <div class="projects-text"><p>40+ проектов</p></div>
+             </div>
+             <div class="wrapper"> 
+              <img src="./assets/images/project-icon.png" alt="project-icon">
+              <div class="projects-text"><p>40+ проектов</p></div>
+             </div>
+         </div>
+       </div>
+     </section>
+   </div>
+   
+   
     <footer class="footer">
       <h3 class="footer-name">Фамилия Имя</h3>
       <p class="footer-right">(с) 2022. Все права защищены.</p>
