--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
       </article>  
     </section>   
     <div class="achievement">
-      <div class="achievement-wrapper col-12 col-md-6">
-         <picture >
+      <div class="achievement-wrapper col-6 col-md-4 col-lg-2">
+        <picture >
           <source srcset="./assets/images/paper.webp">
           <img class="legend" src="./assets/images/paper.png" alt="paper">
-         </picture>
+        </picture>
          
       </div>
     </div>  
