--- a/index.html
+++ b/index.html
@@ -82,9 +82,23 @@
         <picture >
           <source srcset="./assets/images/paper.webp">
           <img class="legend" src="./assets/images/paper.png" alt="paper">
-        </picture>
-         
+        </picture>         
       </div>
+    </div>
+    <div class="proposition">
+      <section class="text-block container" id="text-block">
+        <article class="col-12 col-lg-6 content-center" >
+          <h2 class="sub-heading overflow">Хотите веб-сайт?</h2>
+          <p class="content content center">
+            Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+          </p>  
+        </article>  
+      </section>
+      <form action="#">
+        <input type="text" placeholder="Ваше имя">
+        <input type="email" placeholder="Ваш email">
+        
+      </form>
     </div>  
   </body>
 </html> 
