Add submit for form

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
       </section>
       <form action="#">
         <input type="text" placeholder="Ваше имя">
-        <input type="email" placeholder="Ваш email">
-        
+        <input type="email" name="email" placeholder="Ваш email">
+        <input type="submit" value="отправить">
       </form>
     </div>  
   </body>
