add structure works.css

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./assets/css/header.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="stylesheet" href="./assets/css/about.css" />
+    <link rel="stylesheet" href="./assets/css/works.css" />
     <link rel="stylesheet" href="./assets/css/skills.css" />
   </head>
   <body>
@@ -36,7 +37,7 @@
               <a class="nav-list-item-link" href="#about">ОБ АВТОРЕ</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-list-item-link" href="">работы</a>
+              <a class="nav-list-item-link" href="#works">работы</a>
             </li>
             <li class="nav-list-item">
               <a class="nav-list-item-link" href="">ПРОЦЕСС</a>
@@ -55,51 +56,68 @@
             <div class="wrapper">
               <div class="inner-wrapper">
                 <picture>
-                  <source srcset="./assets/images/laptop.webp">
-                  <img class="main-img" src="./assets/images/laptop.png" alt="laptop">
+                  <source srcset="./assets/images/laptop.webp" />
+                  <img
+                    class="main-img"
+                    src="./assets/images/laptop.png"
+                    alt="laptop"
+                  />
                 </picture>
               </div>
             </div>
           </div>
           <article class="col-12 col-md-6">
             <h1 class="main-heading overflow">Дизайн и верстка</h1>
-            <p class="content rows-overflow">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio aspernatur commodi vero blanditiis modi accusantium perferendis possimus facilis fugit reprehenderit?</p>
+            <p class="content rows-overflow">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+              aspernatur commodi vero blanditiis modi accusantium perferendis
+              possimus facilis fugit reprehenderit?
+            </p>
             <button class="btn overflow">НАПИСАТЬ МНЕ</button>
           </article>
         </div>
       </section>
     </div>
-    <div>
-    <section class="container about " id="about">
-      <article class="col-12 col-md-6 content-centre">
-        <h2 class="sub-heading overflow">Обо мне</h2>
-          <p class="content rows-overflow">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
-      </article>
-    </section>
-  </div>
-  <div>
-    <section class="container skills " id="skills"> 
-    <article class="col-12 col-md-6">
-      <table>
-        <thead>
-          <tr>
-            <th>Мои навыки</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Adobe Photoshop</td>
-            <td>Adobe Photoshop</td>
-            <td>Adobe Photoshop</td>
-          </tr>
-        </tbody>
-      </table>
-      <picture>
-        <source srcset="./assets/images/user.webp">
-      <img class="user-skills" src="./assets/images/user_mobile.jpg" alt="user">
-    </picture>
-    </article>
-    </section>
-  </div>
+    <div class="row">
+      <section class="container about" id="about">
+        <article class="col-12 col-md-6 content-centre">
+          <h2 class="sub-heading overflow">Обо мне</h2>
+          <p class="content rows-overflow">
+            Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+            вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
+            латинице с начала XVI века.
+          </p>
+        </article>
+      </section>
+    </div>
+    <div class="works">
+      <section class="container" id="works">
+      <div class="row">
+        <div class="col-12 col-sm-4 col-md-4 col-lg-2">
+          <img class="img-works" src="./assets/images/project.png" alt="" />
+          <div class="works-item">40+ <p class="item">проектов</p></div>
+        </div>
+        <div class="col-12 col-sm-4 col-md-4 col-lg-2">
+          <img class="img-works" src="./assets/images/project.png" alt="" />
+          <div class="works-item">40+ <p class="item">проектов</p></div>
+        </div>
+        <div class="col-12 col-sm-4 col-md-4 col-lg-2">
+          <img class="img-works" src="./assets/images/project.png" alt="" />
+          <div class="works-item">40+ <p class="item">проектов</p></div>
+        </div>
+        <div class="col-12 col-sm-4 col-md-4 col-lg-2">
+          <img class="img-works" src="./assets/images/project.png" alt="" />
+          <div class="works-item">40+ <p class="item">проектов</p></div>
+        </div>
+        <div class="col-12 col-sm-4 col-md-4 col-lg-2">
+          <img class="img-workst" src="./assets/images/project.png" alt="" />
+          <div class="works-item">40+ <p class="item">проектов</p></div>
+        </div>
+        <div class="col-12 col-sm-4 col-md-4 col-lg-2">
+          <img class="img-workst" src="./assets/images/project.png" alt="" />
+          <div class="works-item">40+ <p class="item">проектов</p></div>
+        </div>
+    </div>
+  </section>
   </body>
 </html>
