Add section Achievement % style

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/header.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/about.css" />
+    <link rel="stylesheet" href="./assets/css/achievement.css" />
   </head>
   <body>
     <header class="navigation">
@@ -79,9 +81,62 @@
       <article class="col-12 col-md-6 content-center">
         <h2 class="sub-hearding overflow">Обо мне</h2>
         <p class="content">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis quis aliquid rerum. Quis sequi facilis expedita itaque minima excepturi aperiam, eaque cupiditate nostrum eius nam eos a ducimus, beatae maxime!
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
+          quis aliquid rerum. Quis sequi facilis expedita itaque minima
+          excepturi aperiam, eaque cupiditate nostrum eius nam eos a ducimus,
+          beatae maxime!
         </p>
       </article>
     </section>
+    <div class="achievement">
+      <section class="container">
+        <div class="row">
+          <div class="col-6 col-sm-4 col-xl-2">
+            <img
+              class="achievement-img"
+              src="./assets/images/Group.png"
+              alt="Group"
+            />
+            <div class="description">
+              <p>40+</p>
+              <p>проектов</p>
+            </div>
+          </div>
+          <div class="col-6 col-sm-4 col-xl-2">
+            <img
+              class="achievement-img"
+              src="./assets/images/Group.png"
+              alt="Group"
+            />
+            <div class="description">
+              <p>40+</p>
+              <p>проектов</p>
+            </div>
+          </div>
+          <div class="col-6 col-sm-4 col-xl-2">
+            <img
+              class="achievement-img"
+              src="./assets/images/Group.png"
+              alt="Group"
+            />
+            <div class="description">
+              <p>40+</p>
+              <p>проектов</p>
+            </div>
+          </div>
+          <div class="col-6 col-sm-4 col-xl-2">
+            <img
+              class="achievement-img"
+              src="./assets/images/Group.png"
+              alt="Group"
+            />
+            <div class="description">
+              <p>40+</p>
+              <p class="">проектов</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
