Add style & grid in projects block

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="bg-full">
       <section class="container main" id="main">
         <div class="row">
-          <div class="col-12 col-md-6">
+          <div class="col-12 col-md-2">
             <div class="wrapper">
               <div class="inner-wrapper">
                 <picture>
@@ -81,42 +81,43 @@
     <section class="text-block">
       <h2 class="text-block-title">Обо мне</h2>
       <p>
-        Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+        Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+        вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
+        латинице с начала XVI века.
       </p>
-   <div class="projects">
-     <section class="projects-container">
-       <div class="projects-row">
-         <div class="col-12 col-md-4 col-lg-2"> 
-           <div class="wrapper"> 
-             <img src="./assets/images/project-icon.png" alt="project-icon">
-             <div class="projects-text"><p>40+ проектов</p></div>
-            </div>
-            <div class="wrapper"> 
-              <img src="./assets/images/project-icon.png" alt="project-icon">
-              <div class="projects-text"><p>40+ проектов</p></div>
-             </div>
-             <div class="wrapper"> 
-              <img src="./assets/images/project-icon.png" alt="project-icon">
-              <div class="projects-text"><p>40+ проектов</p></div>
-             </div>
-             <div class="wrapper"> 
-              <img src="./assets/images/project-icon.png" alt="project-icon">
-              <div class="projects-text"><p>40+ проектов</p></div>
-             </div>
-             <div class="wrapper"> 
-              <img src="./assets/images/project-icon.png" alt="project-icon">
-              <div class="projects-text"><p>40+ проектов</p></div>
-             </div>
-             <div class="wrapper"> 
-              <img src="./assets/images/project-icon.png" alt="project-icon">
-              <div class="projects-text"><p>40+ проектов</p></div>
-             </div>
-         </div>
-       </div>
-     </section>
-   </div>
-   
-   
+    </section>
+
+    <div class="projects">
+      <section class="container">
+        <div class="row">
+          <div class="col-6 col-md-4 col-lg-2 icon-text-wrapper">
+            <img src="./assets/images/project-icon.png" alt="project-icon" />
+            <div class="projects-text"><p>40+ проектов</p></div>
+          </div>
+          <div class="col-6 col-md-4 col-lg-2 icon-text-wrapper">
+            <img src="./assets/images/project-icon.png" alt="project-icon" />
+            <div class="projects-text"><p>40+ проектов</p></div>
+          </div>
+          <div class="col-6 col-md-4 col-lg-2 icon-text-wrapper">
+            <img src="./assets/images/project-icon.png" alt="project-icon" />
+            <div class="projects-text"><p>40+ проектов</p></div>
+          </div>
+          <div class="col-6 col-md-4 col-lg-2 icon-text-wrapper">
+            <img src="./assets/images/project-icon.png" alt="project-icon" />
+            <div class="projects-text"><p>40+ проектов</p></div>
+          </div>
+          <div class="col-6 col-md-4 col-lg-2 icon-text-wrapper">
+            <img src="./assets/images/project-icon.png" alt="project-icon" />
+            <div class="projects-text"><p>40+ проектов</p></div>
+          </div>
+          <div class="col-6 col-md-4 col-lg-2 icon-text-wrapper">
+            <img src="./assets/images/project-icon.png" alt="project-icon" />
+            <div class="projects-text"><p>40+ проектов</p></div>
+          </div>
+        </div>
+      </section>
+    </div>
+
     <footer class="footer">
       <h3 class="footer-name">Фамилия Имя</h3>
       <p class="footer-right">(с) 2022. Все права защищены.</p>
