Final achievement.css

--- a/index.html
+++ b/index.html
@@ -78,12 +78,52 @@
       </article>  
     </section>   
     <div class="achievement">
-      <div class="achievement-wrapper col-6 col-md-4 col-lg-2">
-        <picture >
-          <source srcset="./assets/images/paper.webp">
-          <img class="legend" src="./assets/images/paper.png" alt="paper">
-        </picture>         
-      </div>
+      <section class="container">
+        <div class="row">
+          <div class="box col-6 col-md-4 col-xl-2">
+            <img class="legend" src="./assets/images/paper.png" alt="paper">
+            <div class="achievement-text">
+              <p class="medium">40+</p>
+              <p class="regular">проектов</p>  
+            </div>     
+          </div>
+          <div class="box col-6 col-md-4 col-xl-2">
+            <img class="legend" src="./assets/images/paper.png" alt="paper">
+            <div class="achievement-text">
+              <p class="medium">40+</p>
+              <p class="regular">проектов</p>  
+            </div>     
+          </div>
+          <div class="box col-6 col-md-4 col-xl-2">
+            <img class="legend" src="./assets/images/paper.png" alt="paper">
+            <div class="achievement-text">
+              <p class="medium">40+</p>
+              <p class="regular">проектов</p>  
+            </div>     
+          </div>
+          <div class="box col-6 col-md-4 col-xl-2">
+            <img class="legend" src="./assets/images/paper.png" alt="paper">
+            <div class="achievement-text">
+              <p class="medium">40+</p>
+              <p class="regular">проектов</p>  
+            </div>     
+          </div>
+          <div class="box col-6 col-md-4 col-xl-2">
+            <img class="legend" src="./assets/images/paper.png" alt="paper">
+            <div class="achievement-text">
+              <p class="medium">40+</p>
+              <p class="regular">проектов</p>  
+            </div>     
+          </div>
+          <div class="box col-6 col-md-4 col-xl-2">
+            <img class="legend" src="./assets/images/paper.png" alt="paper">
+            <div class="achievement-text">
+              <p class="medium">40+</p>
+              <p class="regular">проектов</p>  
+            </div>     
+          </div>
+        </div>
+      </section>
     </div>
     <div class="proposition">
       <section class="text-block container" id="text-block">
