Add link two section abount and skill

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="./assets/css/header.css" />
   <link rel="stylesheet" href="./assets/css/main.css" />
   <link rel="stylesheet" href="./assets/css/about.css" />
+  <link rel="stylesheet" href="./assets/css/skills.css" />
 </head>
 
 <body>
@@ -75,22 +76,92 @@
       </article>
     </section>
     <div class="darb-blue">
-      <section class="row col-12 ">
-        <article class="projects content-centr">
-          <picture>
-            <img src="./assets/images/projects.png" alt="" class="img-project">
-            <img src="./assets/images/projects.png" alt="" class="img-project">
-            <img src="./assets/images/projects.png" alt="" class="img-project">
-            <img src="./assets/images/projects.png" alt="" class="img-project">
-            <img src="./assets/images/projects.png" alt="" class="img-project">
-            <img src="./assets/images/projects.png" alt="" class="img-project">
-          </picture>
+      <section class="container ">
+        <div class="row ">
+          <div class="col-12">
+            <div class=" col-xs-1 col-sm-12 col-md-12 content-centr ">
+              <div class="img-block  col-md-2">
+                <source srcset="./assets/images/projects.png" alt="project" class="">
+                <img src="./assets/images/projects.png" alt="project" class="">
+                <div class="text-block">
+                  <p class="">40+ <br> проэктов</p>
+                </div>
+              </div>
+              <div class="img-block  col-md-2">
+                <source srcset="./assets/images/projects.png" alt="project" class="">
+                <img src="./assets/images/projects.png" alt="project" class="">
+                <div class="text-block">
+                  <p class="">40+ <br> проэктов</p>
+                </div>
+              </div>
+              <div class="img-block  col-md-2">
+                <source srcset="./assets/images/projects.png" alt="project" class="">
+                <img src="./assets/images/projects.png" alt="project" class="">
+                <div class="text-block">
+                  <p class="">40+ <br> проэктов</p>
+                </div>
+              </div>
+              <div class="img-block  col-md-2 ">
+                <source srcset="./assets/images/projects.png" alt="project" class="">
+                <img src="./assets/images/projects.png" alt="project" class="">
+                <div class="text-block">
+                  <p class="">40+ <br> проэктов</p>
+                </div>
+              </div>
+              <div class="img-block  col-md-2">
+                <source srcset="./assets/images/projects.png" alt="project" class="">
+                <img src="./assets/images/projects.png" alt="project" class="">
+                <div class="text-block">
+                  <p class="">40+ <br> проэктов</p>
+                </div>
+              </div>
+              <div class="img-block col-md-2">
+                <source srcset="./assets/images/projects.png" alt="project" class="">
+                <img src="./assets/images/projects.png" alt="project" class="">
+                <div class="text-block">
+                  <p class="">40+ <br> проэктов</p>
+                </div>
+              </div>
 
 
-        </article>
+            </div>
+          </div>
+        </div>
       </section>
     </div>
   </div>
+
+  <div class="skills-section">
+    <section class="container">
+      <div class="row wrapper-skill ">
+        <section class="col-12 col-md-6 col-lg-6  ">
+          <div class="content-centr">
+            <div class=" skill  content-centr">
+              <h2 class="my-skill">Мои навыки</h2>
+              <p class="skill-list">Adobe Photoshop</p>
+              <div class="line"></div>
+              <p class="skill-list">
+                Adobe Photoshop</p>
+              <div class="line"></div>
+              <p class="skill-list">
+                Adobe Photoshop</p>
+              <div class="line"></div>
+            </div>
+          </div>
+
+        </section>
+        <section class="col-12 col-md-6 content-centr ">
+          <picture>
+            <source srcset="./assets/images/user.jpg">
+            <img class="user-photo" src="./assets/images/user.jpg" alt="user">
+          </picture>
+        </section>
+
+
+      </div>
+  </div>
+
+
 
 </body>
 
