--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="./assets/css/main.css" />
   <link rel="stylesheet" href="./assets/css/about.css" />
   <link rel="stylesheet" href="./assets/css/skills.css" />
+  <link rel="stylesheet" href="./assets/css/work.css" />
+  <link rel="stylesheet" href="./assets/css/stick.css" />
 </head>
 
 <body>
@@ -159,6 +161,50 @@
 
 
       </div>
+  </div>
+
+  <div class="bg-full">
+    <section class="container how-work" id="work">
+      <div class="row">
+        <div class="col-12 col-md-6 content-centr">
+          <div class="wrapper-work">
+            <h2 class="about-title overflow">Как я работаю</h2>
+            <p class="content rows-overflow">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.
+              Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+          </div>
+          <div class="row">
+            <div class="col-12 col-md-6 col-xl-6 content-centr"></div>
+            <div class="work-img col-12 content-centr">
+              <source srcset="./assets/images/work.jpg" alt="project" class="img-work col-6 ">
+              <img src="./assets/images/work.jpg" alt="project" class="img-work col-6">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+
+  <div class="row no-indent ">
+    <div class="bg-img col-12 col-md-12 ">
+      <picture class="">
+        <source srcset="./assets/images/1.png">
+        <img class="photo-back " src="./assets/images/1.png" alt="">
+        <source srcset="./assets/images/2.png">
+        <img class="photo-back " src="./assets/images/2.png" alt="">
+        <source srcset="./assets/images/1.png">
+        <img class="photo-back" src="./assets/images/1.png" alt="">
+        <source srcset="./assets/images/2.png">
+        <img class="photo-back" src="./assets/images/2.png" alt="">
+        <source srcset="./assets/images/1.png">
+        <img class="photo-back" src="./assets/images/1.png" alt="">
+        <source srcset="./assets/images/2.png">
+        <img class="photo-back" src="./assets/images/2.png" alt="">
+        <source srcset="./assets/images/1.png">
+        <img class="photo-back" src="./assets/images/1.png" alt="">
+        <source srcset="./assets/images/2.png">
+        <img class="photo-back" src="./assets/images/2.png" alt="">
+      </picture>
+    </div>
   </div>
 
 
