Add content about

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/header.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/about.css" />
   </head>
   <body>
     <header class="navigation">
@@ -67,6 +68,13 @@
         </div>
       </section>
     </div>
-
+<div class="abaut">
+  <div class="container">
+    <section class="about content col-12 col-md-6">
+      <h2>Обо мне</h2>
+      <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+    </section>
+  </div>
+</div>
   </body>
 </html>
